--- a/index.html
+++ b/index.html
@@ -2,46 +2,64 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Dawid Nowak - CV</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Dawid Nowak | CV</title>
+  <!-- This link loads Bootstrap -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 </head>
-<body>
-  <header>
-    <h1>Dawid Nowak</h1>
-    <h3><a href="mailto:Kildare2005@gmail.com">Kildare2005@gmail.com</a></h3>
+
+<body class="bg-light text-dark">
+  <!-- Header Section -->
+  <header class="container text-center py-4">
+    <h1 class="fw-bold">Dawid Nowak</h1>
+    <h4 class="text-muted">Kildare2005@gmail.com</h4>
   </header>
 
-  <main class="cv-container">
-    <section class="column">
-      <h2 id="education">Education</h2>
-      <p>Higher Diploma in Computer Science (Software Development) - Ireland (in progress)</p>
-    </section>
+  <!-- Main CV Content -->
+  <main class="container">
+    <div class="row">
+      <!-- Left Column -->
+      <div class="col-md-6 mb-4">
+        <h2 id="education">Education</h2>
+        <p>Higher Diploma in Computer Science (Software Development) — Ireland (in progress)</p>
+      </div>
 
-    <section class="column">
-      <h2>Work Experience</h2>
-      <p>Automation Technology Analyst - everyday work with automation tasks and documentation.</p>
-    </section>
+      <!-- Right Column -->
+      <div class="col-md-6 mb-4">
+        <h2>Work Experience</h2>
+        <p>Automation Technology Analyst — everyday work with automation tasks and documentation.</p>
+      </div>
+    </div>
 
-    <section class="column">
-      <h2>Skills</h2>
-      <ul class="section"> 
-        <li>HTML</li>
-        <li>CSS</li>
-        <li>JavaScript</li>
-        <li>SQL</li>
-      </ul>
+    <div class="row">
+      <!-- Skills -->
+      <div class="col-md-6 mb-4">
+        <h2>Skills</h2>
+        <ul class="section">
+          <li>HTML</li>
+          <li>CSS</li>
+          <li>JavaScript</li>
+          <li>SQL</li>
+        </ul>
+      </div>
 
-      <h2>Links</h2>
-      <p>
-        <a href="https://www.linkedin.com/in/dawid-nowak-3a0a43249/" target="_blank">My LinkedIn</a>
-      </p>
-    </section>
+      <!-- Links -->
+      <div class="col-md-6 mb-4">
+        <h2>Links</h2>
+        <p>
+          <a href="https://www.linkedin.com/in/dawid-nowak-3a0a43249/" class="btn btn-success" target="_blank">My LinkedIn</a>
+        </p>
+      </div>
+    </div>
   </main>
 
-  <footer>
-    <p>&copy; 2025 Dawid Nowak</p>
+  <!-- Footer -->
+  <footer class="text-center py-3 mt-5 bg-dark text-light">
+    <p>© 2025 Dawid Nowak</p>
   </footer>
+
+  <!-- Bootstrap JS -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
-
