--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 
 <body class="bg-light text-dark">
   <!-- Header Section -->
-  <header class="container text-center py-4">
-    <h1 class="fw-bold">Dawid Nowak</h1>
-    <h4 class="text-muted">Kildare2005@gmail.com</h4>
-  </header>
+  <header class="container text-center py-5 bg-success text-white rounded-3 shadow-sm">
+  <h1 class="fw-bold mb-2">Dawid Nowak</h1>
+  <h4 class="fw-normal mb-0">📧 Kildare2005@gmail.com</h4>
+</header>
 
   <!-- Main CV Content -->
   <main class="container">
