--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 
-<body class="bg-light text-dark">
+<<body class="d-flex flex-column min-vh-100 bg-light text-dark">>
   <!-- Header Section -->
   <header class="container text-center py-5 bg-success text-white rounded-3 shadow-sm">
   <h1 class="fw-bold mb-2">Dawid Nowak</h1>
@@ -55,9 +55,9 @@
   </main>
 
   <!-- Footer -->
-  <footer class="text-center py-3 mt-5 bg-dark text-light">
-    <p>© 2025 Dawid Nowak</p>
-  </footer>
+  <footer class="mt-auto text-center py-3 bg-dark text-light">
+  <p class="mb-0">© 2025 Dawid Nowak</p>
+</footer>
 
   <!-- Bootstrap JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
