--- a/index.html
+++ b/index.html
@@ -21,32 +21,33 @@
     <div class="row">
       <!-- Left Column -->
       <div class="col-md-6 mb-4">
-        <h2 id="education">Education</h2>
-        <p>•	Higher Diploma in Computer Science: Software Development – National College of Ireland (20/09/2025 – 10/08/2026) Modules: Software Development, Object Oriented Software Engineering, Introduction to Databases, Web Design and Client-Side Scripting, Computer Architecture, Operating Systems and Networks, Data Structures.
-•	CompTIA Network+ – Cenit College (20/01/2023-01/10/2023)
-•	CompTIA A+ – Cenit College (10/01/2021-28/07/2022)
-</p>
+        <!-- Education -->
+<div class="col-md-6 mb-4">
+  <h2 id="education">Education</h2>
+  <ul>
+    <li>Higher Diploma in Computer Science: Software Development – National College of Ireland (20/09/2025 – 10/08/2026)</li>
+    <li>Modules: Software Development, Object Oriented Software Engineering, Introduction to Databases, Web Design and Client-Side Scripting, Computer Architecture, Operating Systems and Networks, Data Structures.</li>
+    <li>CompTIA Network+ – Cenit College (20/01/2023–01/10/2023)</li>
+    <li>CompTIA A+ – Cenit College (10/01/2021–28/07/2022)</li>
+  </ul>
+</div>
       </div>
 
       <!-- Right Column -->
       <div class="col-md-6 mb-4">
-        <h2>Work Experience</h2>
-        <p>Automation Technology Analyst – Pfizer, Newbridge, Ireland (Apr 2025 – Present)
-•	Reduced the number of EOSL service accounts from 150 to 20 within one year, improving security compliance across production systems
-•	Led Windows 10 → Windows 11 upgrade for production devices, ensuring zero downtime and full GMP validation
-•	Implemented automation scripts to streamline account lifecycle management, reducing manual workload by over 60 %
-•	Supported infrastructure and MES environments by resolving incidents and performing root cause analysis in regulated production areas
-•	Collaborated with cross-functional teams to standardize automation procedures, enhancing system reliability and audit readiness
-Senior Analyst III – Infrastructure Services – DXC Technology / Pfizer, Ireland (Oct 2024 – Mar 2025)
-•	Upgraded full fleet of 100+ Zebra PDT devices to new SureMDM platform, improving manageability and compliance
-•	Deployed and configured DECT phone systems across production areas, ensuring seamless communication coverage
-•	Conducted wireless site surveys using Ekahau and Sidekick, optimizing network performance and signal reliability
-•	Coordinated replacement of EOSL Cisco switches, modernizing site infrastructure and reducing downtime risk
-Deskside Support Engineer II – DXC Technology / Pfizer, Newbridge, Ireland (Jul 2022 – Oct 2024)
-•	Resolved daily hardware and software incidents (laptops, printers, network patching) while consistently meeting SLA targets
-•	Supported infrastructure deployments and user onboarding, ensuring stable operations across site IT environments
-Cleaning Team Leader – Sodexo / Pfizer, Newbridge, Ireland (Mar 2006 – Jun 2022)
-</p>
+       <!-- Work Experience -->
+<div class="col-md-6 mb-4">
+  <h2>Work Experience</h2>
+  <ul>
+    <li>Automation Technology Analyst – Pfizer, Newbridge, Ireland (Apr 2025 – Present): Reduced number of EOSL service accounts from 150 → 20; improved security compliance; led Windows 10 → 11 upgrade.</li>
+    <li>Implemented automation scripts to reduce manual workload by 60 % and maintain GMP validation.</li>
+    <li>Collaborated with cross-functional teams to standardize automation and compliance procedures.</li>
+    <li>Senior Analyst III – Infrastructure Services, DXC Technology / Pfizer (Oct 2024 – Mar 2025): Deployed Zebra PDT devices to SureMDM, improved manageability and compliance.</li>
+    <li>Deployed DECT phones, ran wireless site surveys, and optimized coverage with Ekahau & Sidekick.</li>
+    <li>Deskside Support Engineer II – DXC Technology / Pfizer (Jul 2022 – Oct 2024): Resolved incidents, ensured SLA targets, supported deployments and onboarding.</li>
+    <li>Cleaning Team Leader – Sodexo / Pfizer, Newbridge (Mar 2006 – Jun 2022).</li>
+  </ul>
+</div>
       </div>
     </div>
 
