--- a/index.html
+++ b/index.html
@@ -4,50 +4,44 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Dawid Nowak | CV</title>
-  <!-- This link loads Bootstrap -->
+  <!-- Load Bootstrap -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 </head>
 
-<<body class="d-flex flex-column min-vh-100 bg-light text-dark">>
+<body class="d-flex flex-column min-vh-100 bg-light text-dark">
   <!-- Header Section -->
   <header class="container text-center py-5 bg-success text-white rounded-3 shadow-sm">
-  <h1 class="fw-bold mb-2">Dawid Nowak</h1>
-  <h4 class="fw-normal mb-0">📧 Kildare2005@gmail.com</h4>
-</header>
+    <h1 class="fw-bold mb-2">Dawid Nowak</h1>
+    <h4 class="fw-normal mb-0">📧 Kildare2005@gmail.com</h4>
+  </header>
 
   <!-- Main CV Content -->
-  <main class="container">
+  <main class="container my-4 flex-grow-1">
     <div class="row">
-      <!-- Left Column -->
+      <!-- Education -->
       <div class="col-md-6 mb-4">
-        <!-- Education -->
-<div class="col-md-6 mb-4">
-  <h2 id="education">Education</h2>
-  <ul>
-    <li>Higher Diploma in Computer Science: Software Development – National College of Ireland (20/09/2025 – 10/08/2026)</li>
-    <li>Modules: Software Development, Object Oriented Software Engineering, Introduction to Databases, Web Design and Client-Side Scripting, Computer Architecture, Operating Systems and Networks, Data Structures.</li>
-    <li>CompTIA Network+ – Cenit College (20/01/2023–01/10/2023)</li>
-    <li>CompTIA A+ – Cenit College (10/01/2021–28/07/2022)</li>
-  </ul>
-</div>
+        <h2 id="education">Education</h2>
+        <ul>
+          <li>Higher Diploma in Computer Science: Software Development – National College of Ireland (20/09/2025 – 10/08/2026)</li>
+          <li>Modules: Software Development, Object Oriented Software Engineering, Introduction to Databases, Web Design and Client-Side Scripting, Computer Architecture, Operating Systems and Networks, Data Structures.</li>
+          <li>CompTIA Network+ – Cenit College (20/01/2023–01/10/2023)</li>
+          <li>CompTIA A+ – Cenit College (10/01/2021–28/07/2022)</li>
+        </ul>
       </div>
 
-      <!-- Right Column -->
+      <!-- Work Experience -->
       <div class="col-md-6 mb-4">
-       <!-- Work Experience -->
-<div class="col-md-6 mb-4">
-  <h2>Work Experience</h2>
-  <ul>
-    <li>Automation Technology Analyst – Pfizer, Newbridge, Ireland (Apr 2025 – Present): Reduced number of EOSL service accounts from 150 → 20; improved security compliance; led Windows 10 → 11 upgrade.</li>
-    <li>Implemented automation scripts to reduce manual workload by 60 % and maintain GMP validation.</li>
-    <li>Collaborated with cross-functional teams to standardize automation and compliance procedures.</li>
-    <li>Senior Analyst III – Infrastructure Services, DXC Technology / Pfizer (Oct 2024 – Mar 2025): Deployed Zebra PDT devices to SureMDM, improved manageability and compliance.</li>
-    <li>Deployed DECT phones, ran wireless site surveys, and optimized coverage with Ekahau & Sidekick.</li>
-    <li>Deskside Support Engineer II – DXC Technology / Pfizer (Jul 2022 – Oct 2024): Resolved incidents, ensured SLA targets, supported deployments and onboarding.</li>
-    <li>Cleaning Team Leader – Sodexo / Pfizer, Newbridge (Mar 2006 – Jun 2022).</li>
-  </ul>
-</div>
+        <h2>Work Experience</h2>
+        <ul>
+          <li>Automation Technology Analyst – Pfizer, Newbridge, Ireland (Apr 2025 – Present): Reduced number of EOSL service accounts from 150 → 20; improved security compliance; led Windows 10 → 11 upgrade.</li>
+          <li>Implemented automation scripts to reduce manual workload by 60 % and maintain GMP validation.</li>
+          <li>Collaborated with cross-functional teams to standardize automation and compliance procedures.</li>
+          <li>Senior Analyst III – Infrastructure Services, DXC Technology / Pfizer (Oct 2024 – Mar 2025): Deployed Zebra PDT devices to SureMDM, improved manageability and compliance.</li>
+          <li>Deployed DECT phones, ran wireless site surveys, and optimized coverage with Ekahau & Sidekick.</li>
+          <li>Deskside Support Engineer II – DXC Technology / Pfizer (Jul 2022 – Oct 2024): Resolved incidents, ensured SLA targets, supported deployments and onboarding.</li>
+          <li>Cleaning Team Leader – Sodexo / Pfizer, Newbridge (Mar 2006 – Jun 2022).</li>
+        </ul>
       </div>
     </div>
 
@@ -75,8 +69,8 @@
 
   <!-- Footer -->
   <footer class="mt-auto text-center py-3 bg-dark text-light">
-  <p class="mb-0">© 2025 Dawid Nowak</p>
-</footer>
+    <p class="mb-0">© 2025 Dawid Nowak</p>
+  </footer>
 
   <!-- Bootstrap JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
