--- a/week10/index.html
+++ b/week10/index.html
@@ -50,7 +50,7 @@
 </div>
 
 <script>
-    // This code is used to create an array of 5 random numbers between 1–10
+    // This code is used to create an array of 5 random numbers between 1â€“10
     const numbers = [];
     for (let i = 0; i < 5; i++) {
         numbers.push(Math.floor(Math.random() * 10) + 1);
